--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
                 <div class="social-links">
                     <a href="#" aria-label="Facebook" title="Facebook">📘</a>
                     <a href="#" aria-label="Twitter" title="Twitter">🐦</a>
-                    <a href="#" aria-label="Instagram" title="Instagram">📷</a>
+                    <a href="https://Instagram.com/vin.nesia.id" aria-label="Instagram" title="Instagram">📷</a>
                 </div>
             </div>
             
@@ -689,7 +689,7 @@
         </div>
         
         <div class="footer-bottom">
-            <p>&copy; 2025 Vinnesia. Semua hak dilindungi. | Dibuat dengan ❤️ untuk kemudahan Anda</p>
+            <p>&copy; 2025 Vinnesia. Semua hak dilindungi.</p>
         </div>
     </footer>
 </body>
