--- a/index.html
+++ b/index.html
@@ -88,10 +88,11 @@
     /* Footer */
     footer{background:#f8f9fa;padding:2rem 1rem;margin-top:3rem;border-top:1px solid #dee2e6;text-align:center}
     .footer-content{max-width:1200px;margin:0 auto;display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:2rem;margin-bottom:2rem;text-align:left}
-    .footer-section h4{margin:0 0 1rem 0;color:#212529}
-    .footer-section p,.footer-section a{color:#6c757d;text-decoration:none;line-height:1.6}
+    .footer-section h4{margin:0 0 1rem 0;color:#212529;font-size:1rem;font-weight:600}
+    .footer-section p{color:#6c757d;text-decoration:none;line-height:1.6;font-size:0.875rem;margin:0.5rem 0}
+    .footer-section a{color:#6c757d;text-decoration:none;font-size:0.875rem;transition:color 0.2s}
     .footer-section a:hover,.footer-section a:focus{color:#0d6efd;outline:2px solid transparent}
-    .footer-bottom{border-top:1px solid #dee2e6;padding-top:1rem;color:#6c757d;font-size:0.875rem}
+    .footer-bottom{border-top:1px solid #dee2e6;padding-top:1rem;color:#6c757d;font-size:0.8rem}
     
     /* Responsive design */
     @media (max-width: 768px) {
