--- a/index.html
+++ b/index.html
@@ -434,7 +434,8 @@
     <div class="footer-content">
       <section class="footer-section">
         <h4>Blog Vinnesia</h4>
-        <p>Platform terpercaya untuk belajar teknologi web, SEO, dan digital marketing. Bergabunglah dengan ribuan developer dan marketer Indonesia.</p>
+        <p>Platform terpercaya untuk belajar teknologi web, SEO, dan digital marketing.</p>
+        <p>Bergabunglah dengan ribuan developer dan marketer Indonesia.</p>
       </section>
       
       <section class="footer-section">
@@ -463,7 +464,8 @@
     </div>
     
     <div class="footer-bottom">
-      <p>&copy; 2025 Blog Vinnesia. Semua hak cipta dilindungi. Dibuat dengan ❤️ di Indonesia</p>
+      <p>&copy; 2025 VinNesia — Situs Berita & Informasi Global.</p>
+      <p>All rights reserved. Konten dilindungi undang-undang.</p>
     </div>
   </footer>
 
