--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="keywords" content="teknologi, website, SEO, tutorial, web development, blog indonesia, vinnesia, HTML, CSS, JavaScript">
   <meta name="author" content="Tim Vinnesia">
   <meta name="robots" content="index, follow">
+  <meta name="google-site-verification" content="h4xG5XuTjoTcM8fRui_yj0Dzy2go3ZTa3RfZBGwZmBg" />
   <meta property="og:title" content="Blog Vinnesia - Teknologi & Tutorial Terpercaya">
   <meta property="og:description" content="Artikel berkualitas seputar teknologi, SEO, dan tutorial web development untuk developer Indonesia.">
   <meta property="og:type" content="website">
