--- a/index.html
+++ b/index.html
@@ -140,10 +140,11 @@
     <div class="nav-container">
       <ul class="nav-list">
         <li><a href="/" aria-current="page">Beranda</a></li>
-        <li><a href="/blog">Blog</a></li>
+        <li><a href="/seo">SEO</a></li>
         <li><a href="/tutorial">Tutorial</a></li>
         <li><a href="/tentang">Tentang</a></li>
         <li><a href="/kontak">Kontak</a></li>
+        <li><a href="/tools">Tools</a></li>
       </ul>
     </div>
   </nav>
