--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
       
       <section class="footer-section">
         <h4>Koneksi</h4>
-        <p><a href="https://vinnesia.my.id" rel="external">Vinnesia Official</a></p>
+        <p><a href="vin" rel="external">Vinnesia Official</a></p>
         <p><a href="#forum">Community Forum</a></p>
         <p><a href="/kontributor">Program Kontributor</a></p>
         <p><a href="/rss">RSS Feed</a></p>
