--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     header p{margin:0;font-size:1.25rem;color:#e9ecef;line-height:1.6;text-shadow:1px 1px 2px rgba(0,0,0,0.3)}
     
     /* Navigation */
-    nav{background:#fff;border-bottom:1px solid #dee2e6;position:sticky;top:0}
+    nav{background:#fff;border-bottom:1px solid #dee2e6;position:relative;top:0}
     .nav-container{max-width:1200px;margin:0 auto;padding:0 1rem}
     .nav-list{list-style:none;margin:0;padding:1rem 0;display:flex;gap:2rem;justify-content:center;flex-wrap:wrap}
     .nav-list a{text-decoration:none;color:#495057;font-weight:500;padding:0.5rem 1rem;border-radius:4px;transition:background-color 0.2s,color 0.2s}
