--- a/seo/index.html
+++ b/seo/index.html
@@ -394,6 +394,30 @@
             .sidebar {
                 padding: 20px;
             }
+.pagination {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.pagination a {
+    margin: 0 5px;
+    cursor: pointer;
+    text-decoration: none;
+    color: blue;
+}
+
+.pagination a.active {
+    font-weight: bold;
+    color: red;
+}
+
+.article.article-card {
+    border: 1px solid #ccc;
+    padding: 15px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    background: #f9f9f9;
+}
         }
     </style>
 </head>
