--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <meta name="twitter:title" content="Blog Vinnesia - Teknologi & Tutorial Developer Indonesia">
   <meta name="twitter:description" content="Artikel teknologi dan tutorial untuk developer. Pasang iklan di blog kami!">
   <link rel="canonical" href="https://blog.vinnesia.my.id">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico?v=2" type="image/x-icon">
+  <link rel="manifest" href="/manifest.json">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <title>Blog Vinnesia - Teknologi, SEO & Tutorial Developer Indonesia</title>
   <style>
