--- a/seo/index.html
+++ b/seo/index.html
@@ -8,7 +8,8 @@
     <meta name="keywords" content="blog seo, tips seo, tutorial seo, optimasi website, seo indonesia, strategi seo, teknik seo, panduan seo">
     <meta name="author" content="Vinnesia">
     <link rel="canonical" href="https://blog.vinnesia.my.id/seo">
-    
+    <link rel="icon" type="image/png" href="/favicon-v1.png" sizes="48x48">  
+    <link rel="shortcut icon" href="/favicon-v1.ico" type="image/x-icon">
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Blog SEO Vinnesia - Tips & Tutorial Optimasi Website Terlengkap">
     <meta property="og:description" content="Blog SEO terpercaya dengan panduan lengkap optimasi website untuk meningkatkan ranking Google dan traffic organic.">
