--- a/seo/index.html
+++ b/seo/index.html
@@ -702,8 +702,8 @@
                     <ul>
                         <li><a href="/about/">Tentang Kami</a></li>
                         <li><a href="/contact/">Kontak</a></li>
-                        <li><a href="/privacy/">Privacy Policy</a></li>
-                        <li><a href="/terms/">Terms of Service</a></li>
+                        <li><a href="/privacy-policy/">Privacy Policy</a></li>
+                        <li><a href="/terms-of-service/">Terms of Service</a></li>
                     </ul>
                 </div>
             </div>
