--- a/seo/index.html
+++ b/seo/index.html
@@ -700,10 +700,10 @@
                 <div class="footer-section">
                     <h4>Tentang</h4>
                     <ul>
-                        <li><a href="seo/about">Tentang Kami</a></li>
-                        <li><a href="seo/contact">Kontak</a></li>
-                        <li><a href="seo/privacy-policy">Privacy Policy</a></li>
-                        <li><a href="seo/terms-of-service">Terms of Service</a></li>
+                        <li><a href="about">Tentang Kami</a></li>
+                        <li><a href="contact">Kontak</a></li>
+                        <li><a href="privacy-policy">Privacy Policy</a></li>
+                        <li><a href="terms-of-service">Terms of Service</a></li>
                     </ul>
                 </div>
             </div>
