--- a/seo/about/index.html
+++ b/seo/about/index.html
@@ -399,13 +399,13 @@
     <!-- Header -->
     <header class="header">
         <div class="header-content">
-            <a href="/" class="logo">VINNESIA</a>
+            <a href="../" class="logo">VINNESIA</a>
             <nav class="nav">
-                <a href="/">Beranda</a>
+                <a href="../">Beranda</a>
                 <a href="/seo/">SEO</a>
                 <a href="/tools/">Tools</a>
                 <a href="/tutorial/">Tutorial</a>
-                <a href="/tentang-kami/" class="active">About</a>
+                <a href="/" class="active">About</a>
             </nav>
         </div>
     </header>
@@ -562,19 +562,19 @@
             <div class="footer-section">
                 <h4>QR Code Tools</h4>
                 <ul>
-                    <li><a href="/tools/qr-url/">URL QR Code</a></li>
-                    <li><a href="/tools/qr-vcard/">vCard QR Code</a></li>
-                    <li><a href="/tools/qr-wifi/">WiFi QR Code</a></li>
-                    <li><a href="/tools/qr-sms/">SMS QR Code</a></li>
+                    <li><a href="https://qr.vinnesia.my.id">URL QR Code</a></li>
+                    <li><a href="https://qr.vinnesia.my.id">vCard QR Code</a></li>
+                    <li><a href="https://qr.vinnesia.my.id">WiFi QR Code</a></li>
+                    <li><a href="https://qr.vinnesia.my.id">SMS QR Code</a></li>
                 </ul>
             </div>
             <div class="footer-section">
                 <h4>Perusahaan</h4>
                 <ul>
-                    <li><a href="/tentang-kami/">Tentang Kami</a></li>
-                    <li><a href="/kontak/">Kontak</a></li>
-                    <li><a href="/privacy-policy/">Privacy Policy</a></li>
-                    <li><a href="/terms-of-service/">Terms of Service</a></li>
+                    <li><a href="../about/">Tentang Kami</a></li>
+                    <li><a href="../contact/">Kontak</a></li>
+                    <li><a href="../privacy-policy/">Privacy Policy</a></li>
+                    <li><a href="../terms-of-service/">Terms of Service</a></li>
                 </ul>
             </div>
         </div>
