--- a/seo/index.html
+++ b/seo/index.html
@@ -413,10 +413,10 @@
                 <a href="/" class="logo">VINNESIA</a>
                 <nav class="nav">
                     <a href="/">Beranda</a>
-                    <a href="/seo/">SEO</a>
-                    <a href="/tools/">Tools</a>
-                    <a href="/tutorial/">Tutorial</a>
-                    <a href="/about/">About</a>
+                    <a href="seo">SEO</a>
+                    <a href="tools/">Tools</a>
+                    <a href="tutorial">Tutorial</a>
+                    <a href="about">About</a>
                 </nav>
             </div>
         </div>
