--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   <header>
     <div class="hero-content">
       <div class="logo">
-        <img src="/logo.png" alt="Logo Blog Vinnesia" width="80" height="80" loading="lazy">
+        <img src="logo.png" alt="Logo Blog Vinnesia" width="80" height="80" loading="lazy">
       </div>
       <h1>Blog Vinnesia</h1>
       <p>Belajar teknologi, SEO, dan web development untuk developer Indonesia</p>
